--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,16 @@ after_success:
   - docker push multi-nginx
   - docker push multi-server
   - docker push multi-worker
+  
+#aws amazon database cloud
+deploy:
+  provider: elasticbeanstalk
+  region: us-west-1
+  app: multi-docker
+  env: MultiDocker-env
+  #bucket_name: bucketname from amazonon
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
